# qucsator_rf

./: .gitignore  CMakeLists.txt  NEWS.md  README.md
.github/workflows/: cmake.yml  macos.yml  windows.yml
doc/: CMakeLists.txt
src/: CMakeLists.txt  check_citi.cpp  check_mdl.cpp  check_netlist.cpp  circuit.cpp  compat.h  environment.cpp  equation.cpp  evaluate.cpp  hbsolver.cpp  matvec.cpp  module.cpp  nasolver.cpp  parse_csv.ypp  parse_netlist.ypp  parse_touchstone.ypp  repl_reg.cpp  scan_citi.lpp  scan_csv.lpp  scan_dataset.lpp  scan_mdl.lpp  scan_netlist.lpp  scan_touchstone.lpp  scan_zvr.lpp  spline.cpp  strlist.cpp  strlist.h  tmatrix.cpp  tvector.cpp  ucs.cpp  vector.cpp
src/components/: CMakeLists.txt  components.h  rectline.cpp
src/components/devices/: CMakeLists.txt  thyristor.cpp
src/components/digital/: CMakeLists.txt
src/components/microstrip/: CMakeLists.txt  bondwire.cpp  bondwire.h  mscorner.cpp  mscorner.h  mscoupled.cpp  mscoupled.h  msmbend.cpp  msmbend.h  msrstub.cpp
src/components/verilog/: CMakeLists.txt
src/converter/: CMakeLists.txt  check_spice.cpp  csv_producer.cpp  parse_spice.ypp  parse_vcd.ypp  qucs_producer.cpp  qucs_producer.h  qucsconv.cpp  scan_spice.lpp  scan_vcd.lpp  touchstone_producer.cpp
src/interface/: CMakeLists.txt  e_trsolver.cpp
src/math/: CMakeLists.txt  complex.cpp  complex.h  real.cpp  real.h
tests/basic/components/csv/: qucs_csv.csv
tests/basic/components/spfile/: bjt.cir
